@@ -3,6 +3,7 @@
 ! Updated roots/snares
 ! API bump
 + Added notifications to notify when a new version was detected or user uses the beta version
++ Added option to mute sound when under hard cc
 
 2025.01.16 v1.1.0
 ! ccActive will now be cleared on player death
